# get-pty-output

./: .gitignore  Cargo.toml  LICENSE  README.md  foo.js  idle-cmd.js  index.d.ts  index.js  lib.d.ts  lib.js  long-running-cmd.js  package.json  sample.js  tsconfig.json  updating-cmd.js
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: hanging.js  idle-cmd.js  index.spec.ts  long-running-cmd.js  simple-cmd.js  stdout-update.js  stream-test.js  updating-cmd.js
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: common.rs  exec.rs  lib.rs  unix.rs  windows.rs
