[package]
authors = ["Cyriac Béré <cyriacbr@gmail.com>"]
edition = "2021"
name = "get-pty-output"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.0-beta.5", features = ["full"] }
napi-derive = "2.0.0-beta.5"
regex = "1.5.4"

[target.'cfg(windows)'.dependencies]
conpty = "0.2.1"

[target.'cfg(not(windows))'.dependencies]
portable-pty = "0.7.0"
shellwords = "1.1.0"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
