[package]
authors = ["Cyriac Béré <cyriacbr@gmail.com>"]
edition = "2021"
name = "get-pty-output"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
napi-derive = "2.7.0"
regex = "1.5.4"
lazy_static = "1"
portable-pty = { git = "https://github.com/wez/wezterm.git" }
shellwords = "1.1.0"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
